--- a/index.html
+++ b/index.html
@@ -1,130 +1,107 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Техномарт - магазин строительных материалов</title>
-  </head>
-  <body>
-    <header>
-    	<a>
-			<img src="https://via.placeholder.com/220x47" width="220" height="47" alt="Логотип магазина «Техномарт»">
-		</a>
-		<p>
-		<!--здесь будет форма поиска-->
-		
-			<a href="">Закладки: 0</a>
-			<a href="">Корзина: 0</a>
-			<a href="">Оформить заказ</a>
-		</p>
-		<p>
-			Интернет-магазин<br>
-			строительных материалов<br>
-			и инструментов для ремонта
-		</p>
-		<a href="tel:+78125550555">+7(812) 555-05-55</a>
-		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-		<ul>
-			<li>
-				<a href="">Войти</a>
-				<a href="">Регистрация</a>				
-			</li>
-			<li>
-				<a href="">Равшан Джамшутович</a>
-				<a href="">Мои заказы</a>
-				<a href="">Личный кабинет</a>
-
-			</li>
-		</ul>
-		<nav>
-			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="about.html">Компания</a></li>
-				<li><a href="catalog.html">Каталог</a></li>
-				<li><a href="news.html">Новости</a></li>
-				<li><a href="special.html">Спецпредложения</a></li>
-				<li><a href="delivery.html">Доставка</a></li>
-				<li><a href="contacts.html">Контакты</a></li>
-			</ul>
-		</nav>
-    </header>
-
-    <main>
-    	<h1>Техномарт - интернет-магазин строительных материалов и инструментов для ремонта</h1>
-
-    	<!--Здесь будут: промо-блок, поп товары, производители, сервисы-->
-
-    	<section>
-    		<h2><a href="about.html">Подробнее о компании</a></h2>
+	<head>
+		<meta charset="utf-8">
+		<title>Техномарт - магазин строительных материалов</title>
+	</head>
+	<body>
+		<header>
+			<a>
+				<img src="https://via.placeholder.com/220x47" width="220" height="47" alt="Логотип магазина «Техномарт»">
+			</a>
+			<p>
+				<!--здесь будет форма поиска-->
+				<a href="">Закладки: 0</a>
+				<a href="">Корзина: 0</a>
+				<a href="">Оформить заказ</a>
+			</p>
+			<p>
+				Интернет-магазин строительных материалов и инструментов для ремонта
+			</p>
 			<div>
-				<h3>Компания «Техномарт»</h3>
-				<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-
-				<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными компаниями: </p>
-
+				<a href="tel:+78125550555">+7(812) 555-05-55</a>
+				<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+			</div>
+			<div>
+				<a href="">Войти</a>
+				<a href="">Регистрация</a>
+			</div>
+			<nav>
 				<ul>
-					<li>Деловые лини</li>
-					<li>Автотрейдинг</li>
-					<li>ЖелДорЭкспедция</li>
+					<li><a href="index.html">Главная</a></li>
+					<li><a href="about.html">Компания</a></li>
+					<li><a href="catalog.html">Каталог</a></li>
+					<li><a href="news.html">Новости</a></li>
+					<li><a href="special.html">Спецпредложения</a></li>
+					<li><a href="delivery.html">Доставка</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<h1>Техномарт - интернет-магазин строительных материалов и инструментов для ремонта</h1>
+			<!--Здесь будут: промо-блок, поп товары, производители, сервисы-->
+			<section>
+				<h2>Подробнее о компании</h2>
+				<div>
+					<h3>Компания «Техномарт»</h3>
+					<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+					<p>Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными компаниями: </p>
+					<ul>
+						<li>Деловые лини</li>
+						<li>Автотрейдинг</li>
+						<li>ЖелДорЭкспедция</li>
+					</ul>
+					<a href="about.html">Подробнее о компании</a>
+				</div>
+				<div>
+					<h3>Контакты</h3>
+					<p>вы можете забрать товар сами, заехав в наш офис:</p>
+					<img src="https://via.placeholder.com/300x160" alt="Адрес офиса: г.Санкт-Петербург, ул. Большая Конюшенная, 19/8" width="300" height="160">
+					<a href="">Заблудились? Напишите нам!</a>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<div>
+				<a>
+					<img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип магазина «Техномарт»">
+				</a>
+				<ul>
+					<li><a href="about.html">Компания</a></li>
+					<li><a href="news.html">Новости</a></li>
+					<li><a href="catalog.html">Каталог</a></li>
+					<li><a href="delivery.html">Доставка</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+				</ul>
+				<p>
+					г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+					+7 (812) 555-05-55
+				</p>
+				<ul>
+					<li><a href="">Материалы</a></li>
+					<li><a href="">Техника</a></li>
+					<li><a href="">Инструмент</a></li>
+					<li><a href="">Спецпредложения</a></li>
 				</ul>
 			</div>
-
 			<div>
-				<h3>Контакты</h3>
-				<p>вы можете забрать товар сами,<br>
-				заехав в наш офис:</p>
-
-				<img src="https://via.placeholder.com/300x160" alt="Адрес офиса: г.Санкт-Петербург, ул. Большая Конюшенная, 19/8" width="300" height="160">
-				
-				<a href="">Заблудились? Напишите нам!</a>
-
-			</div>
-    	</section>
-    </main>
-
-    <footer>
-    	<div>
-	    	<a>
-	    		<img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип магазина «Техномарт»">
-			</a>
-			<ul>
-				<li><a href="about.html">Компания</a></li>
-				<li><a href="news.html">Новости</a></li>
-				<li><a href="catalog.html">Каталог</a></li>
-				<li><a href="delivery.html">Доставка</a></li>
-				<li><a href="contacts.html">Контакты</a></li>		
-			</ul>
-			<p>
-				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-				+7 (812) 555-05-55
-			</p>
-			<ul>
-				<li><a href="">Материалы</a></li>
-				<li><a href="">Техника</a></li>
-				<li><a href="">Инструмент</a></li>
-				<li><a href="">Спецпредложения</a></li>
-			</ul>
-		</div>
-		<div>
-			<p>
-				© 2010–2019 Компания «Техномарт»<br>
-				Все права защищены
-			</p>
-			<ul>
-				<li><a href="#"></a>Вконтакте</li>
-				<li><a href="#"></a>Фэйсбук</li>
-				<li><a href="#"></a>Инстаграм</li>
-			</ul>
-			<p>	Обратная связь:<br>
-				<span>mail@htmlacademy.ru</span>	
-			</p>
-			<p>	Разработано —<br>
-				<span>
+				<p>
+					© 2010–2019 Компания «Техномарт»<br>
+					Все права защищены
+				</p>
+				<ul>
+					<li><a href="#"><!--здесь иконка ссылки--></a></li>
+					<li><a href="#"><!--здесь иконка ссылки--></a></li>
+					<li><a href="#"><!--здесь иконка ссылки--></a></li>
+				</ul>
+				<p>	Обратная связь:<br>
+					<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+				</p>
+				<p>	Разработано —<br>
 					<a href="https://htmlacademy.ru">htmlacademy.ru</a>
-				</span>	
-			</p>
-			
-		</div>
-    </footer>
-
-  </body>
+				</p>
+			</div>
+		</footer>
+	</body>
 </html>
