--- a/catalog.html
+++ b/catalog.html
@@ -43,128 +43,149 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Перфораторы</h1>
 			<ul>
 				<li><a href="index.html"></a></li>
 				<li><a href="catalog.html">Каталог</a></li>
 				<li><a href="">Инструмент</a></li>
 				<li><a>Перфораторы</a></li>
 			</ul>
-
-			<!--Здесь блоки фильтров Цена, Производители Питание-->
-
+			<h1>Перфораторы</h1>
+			<div>
+				<p>Фильтр:</p>
+				<!--Здесь форма выбора Цена, Производители, Питание-->
+			</div>	
+			<div>
+				<div>
+					<span>Сортировка:</span>
+					<a>По цене</a>
+					<a href="">По типу</a>
+					<a href="">По функционалу</a>
+					<a href=""><!--CSS по возрастанию--></a>
+					<a><!--CSS по убыванию--></a>
+				</div>
+				<section>
+					<h2>Список перфораторов</h2>
+					<ul>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
+							<span>22500 Р.</span>
+							<a href="">15500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
+							<span>30500 Р.</span>
+							<a href="">25500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
+							<span></span>
+							<a href="">12500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
+							<span>22500 Р.</span>
+							<a href="">15500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
+							<span>30500 Р.</span>
+							<a href="">25500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
+							<span></span>
+							<a href="">12500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
+							<span>22500 Р.</span>
+							<a href="">15500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
+							<span>30500 Р.</span>
+							<a href="">25500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+						<li>
+							<a href="">
+								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170">
+							</a>
+							<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
+							<span></span>
+							<a href="">12500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+						</li>
+					</ul>
+					<ul><!--пагинация-->
+						<li>1</li>
+						<li><a href="">2</a></li>
+						<li><a href="">3</a></li>
+						<li><a href="">следующая</a></li>
+					</ul>
+				</section>
+			</div>
 			<section>
-				<h2>Список перфораторов</h2>
-				<ul>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
-						<span>22500 Р.</span>
-						<a href="">15500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
-						<span>30500 Р.</span>
-						<a href="">25500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
-						<span></span>
-						<a href="">12500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
-						<span>22500 Р.</span>
-						<a href="">15500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
-						<span>30500 Р.</span>
-						<a href="">25500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
-						<span></span>
-						<a href="">12500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
-						<span>22500 Р.</span>
-						<a href="">15500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="218" >
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
-						<span>30500 Р.</span>
-						<a href="">25500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-					<li>
-						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="218">
-						</a>
-						<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
-						<span></span>
-						<a href="">12500 Р.</a>
-						<div>
-							<a href="">Купить</a>
-							<a href="">В закладки</a>
-						</div>
-					</li>
-				</ul>
+				<h2>Пара слов о перфораторах</h2>
+				<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
 			</section>
 		</main>
 		<footer>
