--- a/index.html
+++ b/index.html
@@ -40,7 +40,126 @@
 		</header>
 		<main>
 			<h1>Техномарт - интернет-магазин строительных материалов и инструментов для ремонта</h1>
-			<!--Здесь будут: промо-блок, поп товары, производители, сервисы-->
+			<div>
+				<div>
+					<div>
+						<p>Материалы</p>
+						<a href="">На любой вкус</a>
+					</div>
+					<div>
+						<p>Инструмент</p>
+						<a href="">На все случаи</a>
+					</div>
+					<div><!--тут слайдер--></div>
+				</div>	
+				<div>
+					<div>
+						<p>Техника</p>
+						<a href="">Для стройки</a>
+					</div>
+					<div>
+						<p>Скидки 50%</p>
+						<a href="">На 350 товаров</a>
+					</div>
+					<div>
+						<p>Доставка</p>
+						<a href="">Бесплатно</a>
+					</div>
+				</div>
+			</div>
+			<section>
+				<div>
+					<h2>Популярные товары:</h2>
+					<a href="">Все популярные товары</a>
+				</div>
+				<ul>
+					<li>
+						<a href="">
+							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 9000" width="218" height="170" >
+						</a>
+						<h3><a href="">Перворатор BOSCH<br>BFG 9000</a></h3>
+						<span>32500 Р.</span>
+						<a href="">25500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+						</a>
+						<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
+						<span>25500 Р.</span>
+						<a href="">15500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+						</a>
+						<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
+						<span>30500 Р.</span>
+						<a href="">25500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+					</li>
+					<li>
+						<a href="">
+							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+						</a>
+						<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
+						<a href="">12500 Р.</a>
+							<div>
+								<a href="">Купить</a>
+								<a href="">В закладки</a>
+							</div>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<div>
+					<h2>Популярные Производители:</h2>
+					<a href="">Все производители</a>
+				</div>
+				<ul>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель BOSCH"></a>
+					</li>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель Makita"></a>
+					</li>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель DeWALT"></a>
+					</li>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель Интерскол"></a>
+					</li>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель Hitachi"></a>
+					</li>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель LG"></a>
+					</li>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель ARG"></a>
+					</li>
+					<li>
+						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель metabo"></a>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2>Сервисы</h2>
+				<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+				Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+				<!--Тут слайдер: Доставка-Гарантия-Кредит-->
+			</section>
 			<section>
 				<h2>Подробнее о компании</h2>
 				<div>
