--- a/catalog.html
+++ b/catalog.html
@@ -7,12 +7,12 @@
 	<body>
 		<header>
 			<a href="index.html" >
-				<img src="https://via.placeholder.com/220x47" width="220" height="47" alt="Логотип магазина «Техномарт»">
+				<img src="img/logo-header.svg" width="220" height="47" alt="Логотип магазина «Техномарт»">
 			</a>
 			<p>
 				<!--здесь будет форма поиска-->
 				<a href="">Закладки: 0</a>
-				<a href="">Корзина: 0</a>
+				<a href="">Корзина: 10</a>
 				<a href="">Оформить заказ</a>
 			</p>
 			<p>
@@ -68,7 +68,7 @@
 					<ul>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+								<img src="img/Perforator_1.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
 							<span>22500 Р.</span>
@@ -80,7 +80,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+								<img src="img/Perforator_2.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
 							<span>30500 Р.</span>
@@ -92,7 +92,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+								<img src="img/Perforator_3.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
 							<span></span>
@@ -104,7 +104,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+								<img src="img/Perforator_1.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
 							<span>22500 Р.</span>
@@ -116,7 +116,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+								<img src="img/Perforator_2.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
 							<span>30500 Р.</span>
@@ -128,7 +128,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+								<img src="img/Perforator_3.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
 							<span></span>
@@ -140,7 +140,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+								<img src="img/Perforator_1.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
 							<span>22500 Р.</span>
@@ -152,7 +152,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+								<img src="img/Perforator_2.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
 							<span>30500 Р.</span>
@@ -164,7 +164,7 @@
 						</li>
 						<li>
 							<a href="">
-								<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170">
+								<img src="img/Perforator_3.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170">
 							</a>
 							<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
 							<span></span>
@@ -191,7 +191,7 @@
 		<footer>
 			<div>
 				<a>
-					<img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип магазина «Техномарт»">
+					<img src="img/logo-footer.svg" width="220" height="68" alt="Логотип магазина «Техномарт»">
 				</a>
 				<ul>
 					<li><a href="about.html">Компания</a></li>
