--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<header>
 			<a>
-				<img src="https://via.placeholder.com/220x47" width="220" height="47" alt="Логотип магазина «Техномарт»">
+				<img src="img/logo-header.svg" width="220" height="47" alt="Логотип магазина «Техномарт»">
 			</a>
 			<p>
 				<!--здесь будет форма поиска-->
@@ -50,7 +50,10 @@
 						<p>Инструмент</p>
 						<a href="">На все случаи</a>
 					</div>
-					<div><!--тут слайдер--></div>
+					<div><!--тут слайдер-->
+						<img src="img/slider-dril.jpg" width="620" height="266" alt="Открыть каталог дрелей - на все случаи">
+						<img src="img/slider-perfo.jpg" width="620" height="266" alt="Открыть каталог перфораторов - настоящие мужские игрушки">
+					</div>
 				</div>	
 				<div>
 					<div>
@@ -75,7 +78,7 @@
 				<ul>
 					<li>
 						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 9000" width="218" height="170" >
+							<img src="img/Perforator_1_index.jpg" alt="Перворатор BOSCH BFG 9000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 9000</a></h3>
 						<span>32500 Р.</span>
@@ -87,7 +90,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+							<img src="img/Perforator_2_index.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
 						<span>25500 Р.</span>
@@ -99,7 +102,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+							<img src="img/Perforator_3_index.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
 						<span>30500 Р.</span>
@@ -111,7 +114,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="https://via.placeholder.com/218x170" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+							<img src="img/Perforator_4_index.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
 						<a href="">12500 Р.</a>
@@ -129,28 +132,28 @@
 				</div>
 				<ul>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель BOSCH"></a>
+						<a href=""><img src="img/bosch.png" alt="Производитель BOSCH"></a>
 					</li>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель Makita"></a>
+						<a href=""><img src="img/Makita.png" alt="Производитель Makita"></a>
 					</li>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель DeWALT"></a>
+						<a href=""><img src="img/DeWALT.png" alt="Производитель DeWALT"></a>
 					</li>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель Интерскол"></a>
+						<a href=""><img src="img/Интерскол.png" alt="Производитель Интерскол"></a>
 					</li>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель Hitachi"></a>
+						<a href=""><img src="img/Hitachi.png" alt="Производитель Hitachi"></a>
 					</li>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель LG"></a>
+						<a href=""><img src="img/LG.png" alt="Производитель LG"></a>
 					</li>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель ARG"></a>
+						<a href=""><img src="img/AEG.png" alt="Производитель AEG"></a>
 					</li>
 					<li>
-						<a href=""><img src="https://via.placeholder.com/126x37" alt="Производитель metabo"></a>
+						<a href=""><img src="img/Metabo.png" alt="Производитель metabo"></a>
 					</li>
 				</ul>
 			</section>
@@ -176,7 +179,7 @@
 				<div>
 					<h3>Контакты</h3>
 					<p>вы можете забрать товар сами, заехав в наш офис:</p>
-					<img src="https://via.placeholder.com/300x160" alt="Адрес офиса: г.Санкт-Петербург, ул. Большая Конюшенная, 19/8" width="300" height="160">
+					<img src="img/map.png" alt="Адрес офиса: г.Санкт-Петербург, ул. Большая Конюшенная, 19/8" width="300" height="160">
 					<a href="">Заблудились? Напишите нам!</a>
 				</div>
 			</section>
@@ -184,7 +187,7 @@
 		<footer>
 			<div>
 				<a>
-					<img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип магазина «Техномарт»">
+					<img src="img/logo-footer.svg" width="220" height="68" alt="Логотип магазина «Техномарт»">
 				</a>
 				<ul>
 					<li><a href="about.html">Компания</a></li>
