--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<ul>
 					<li>
 						<a href="">
-							<img src="img/Perforator_1_index.jpg" alt="Перворатор BOSCH BFG 9000" width="218" height="170" >
+							<img src="img/perforator_1_index.jpg" alt="Перворатор BOSCH BFG 9000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 9000</a></h3>
 						<span>32500 Р.</span>
@@ -90,7 +90,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="img/Perforator_2_index.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+							<img src="img/perforator_2_index.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
 						<span>25500 Р.</span>
@@ -102,7 +102,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="img/Perforator_3_index.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+							<img src="img/perforator_3_index.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
 						<span>30500 Р.</span>
@@ -114,7 +114,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="img/Perforator_4_index.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+							<img src="img/perforator_4_index.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
 						<a href="">12500 Р.</a>
@@ -135,25 +135,25 @@
 						<a href=""><img src="img/bosch.png" alt="Производитель BOSCH"></a>
 					</li>
 					<li>
-						<a href=""><img src="img/Makita.png" alt="Производитель Makita"></a>
+						<a href=""><img src="img/makita.png" alt="Производитель Makita"></a>
 					</li>
 					<li>
-						<a href=""><img src="img/DeWALT.png" alt="Производитель DeWALT"></a>
+						<a href=""><img src="img/dewalt.png" alt="Производитель DeWALT"></a>
 					</li>
 					<li>
-						<a href=""><img src="img/Интерскол.png" alt="Производитель Интерскол"></a>
+						<a href=""><img src="img/interscol.png" alt="Производитель Интерскол"></a>
 					</li>
 					<li>
-						<a href=""><img src="img/Hitachi.png" alt="Производитель Hitachi"></a>
+						<a href=""><img src="img/hitachi.png" alt="Производитель Hitachi"></a>
 					</li>
 					<li>
-						<a href=""><img src="img/LG.png" alt="Производитель LG"></a>
+						<a href=""><img src="img/lg.png" alt="Производитель LG"></a>
 					</li>
 					<li>
-						<a href=""><img src="img/AEG.png" alt="Производитель AEG"></a>
+						<a href=""><img src="img/aeg.png" alt="Производитель AEG"></a>
 					</li>
 					<li>
-						<a href=""><img src="img/Metabo.png" alt="Производитель metabo"></a>
+						<a href=""><img src="img/metabo.png" alt="Производитель metabo"></a>
 					</li>
 				</ul>
 			</section>
