--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="img/perforator_2_index.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
+							<img src="img/perforator_1.jpg" alt="Перворатор BOSCH BFG 3000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 3000</a></h3>
 						<span>25500 Р.</span>
@@ -102,7 +102,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="img/perforator_3_index.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
+							<img src="img/perforator_2.jpg" alt="Перворатор BOSCH BFG 6000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 6000</a></h3>
 						<span>30500 Р.</span>
@@ -114,7 +114,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="img/perforator_4_index.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
+							<img src="img/perforator_1.jpg" alt="Перворатор BOSCH BFG 2000" width="218" height="170" >
 						</a>
 						<h3><a href="">Перворатор BOSCH<br>BFG 2000</a></h3>
 						<a href="">12500 Р.</a>
