Revert "Личный проект: завершаем разметку "

--- a/catalog.html
+++ b/catalog.html
@@ -52,15 +52,8 @@
 			<h1>Перфораторы</h1>
 			<div>
 				<p>Фильтр:</p>
+				<!--Здесь форма выбора Цена-->
 				<form action="https://echo.htmlacademy.ru" method="get">
-					<!--Ползунки выбора цены еще будут дорабатываться пока не знаю как-->
-					<fieldset>
-						<legend>Цена:</legend>
-						<input type="range" min="0" max="40000" step="500">
-						<div>0</div>
-						<div>—</div>
-						<div>30000</div>
-					</fieldset>
 					<fieldset>
 						<legend>Производители:</legend>
 						<ul>
