--- a/index.html
+++ b/index.html
@@ -161,34 +161,7 @@
 				<h2>Сервисы</h2>
 				<p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
 				Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-				<ul>
-					<li>
-						<button type="button">Доставка</button>
-						<h3">Доставка</h3>
-						<p>Мы с удовольствием доставим ваш товар прямо<br>
-						к вашему подъезду совершенно бесплатно!<br>
-						Ведь мы неплохо заработаем,<br>
-						поднимая его на ваш этаж!</p>
-					</li>
-					<li>
-						<button type="button">Гарантия</button>
-						<h3 class="visually-hidden">Гарантия</h3>
-						<p class="visually-hidden">Если купленный у нас товар поломается или заискрит,<br>
-						а также в случае пожара, спровоцированного его возгоранием,<br>
-						вы всегда можете быть уверенны в нашей гарантии. Мы обменяем<br>
-						сгоревший товар на новый.<br>
-						Дом уж восстановите как-нибудь сами.</p>
-					</li>
-					<li>
-						<button type="button">Кредит</button>
-						<h3 class="visually-hidden">Кредит</h3>
-						<p class="visually-hidden">
-							Залезать в долговую яму стало проще!<br>
-							Кредитные консультанты придут вам на помощь.
-							<a href="#">Отправить заявку</a>
-						</p>
-					</li>
-				</ul>
+				<!--Тут слайдер: Доставка-Гарантия-Кредит-->
 			</section>
 			<section>
 				<h2  class="visually-hidden">Подробнее о компании</h2>
