доработка базовой стилизации 1
исправление ошибок согласно рекомендаций: убран height в объектах, выравнивание и высота переназначена с помощью padding, улучшены тени, добавлен display:block там где это нужно.

--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
 			<div class="promo">
 				<div class="promo-left">
 					<div class="promo-block material new">
-						<p>Материалы</p>
-						<a class="btn button-promo" href="">На любой вкус</a>
+						<div class="promo-inner">
+							<p>Материалы</p>
+							<a class="btn button-promo" href="">На любой вкус</a>
+						</div>
 					</div>
 					<div class="promo-block tools">
-						<p>Инструмент</p>
-						<a class="btn button-promo" href="">На все случаи</a>
+						<div class="promo-inner">
+							<p>Инструмент</p>
+							<a class="btn button-promo" href="">На все случаи</a>
+						</div>
 					</div>
 					<div class="slider"><!--тут слайдер-->
 						<img src="img/slider-dril.jpg" width="620" height="266" alt="Открыть каталог дрелей - на все случаи">
@@ -64,16 +68,22 @@
 				</div>	
 				<div class="promo-right">
 					<div class="promo-block machine">
-						<p>Техника</p>
-						<a class="btn button-promo" href="">Для стройки</a>
+						<div class="promo-inner">
+							<p>Техника</p>
+							<a class="btn button-promo" href="">Для стройки</a>
+						</div>
 					</div>
 					<div class="promo-block discount">
-						<p>Скидки 50%</p>
-						<a class="btn button-promo" href="">На 350 товаров</a>
+						<div class="promo-inner">
+							<p>Скидки 50%</p>
+							<a class="btn button-promo" href="">На 350 товаров</a>
+						</div>
 					</div>
 					<div class="promo-block delivery">
-						<p>Доставка</p>
-						<a class="btn button-promo" href="">Бесплатно</a>
+						<div class="promo-inner">
+							<p>Доставка</p>
+							<a class="btn button-promo" href="">Бесплатно</a>
+						</div>	
 					</div>
 				</div>
 			</div>
@@ -159,7 +169,7 @@
 					</li>
 					<li class="brands-item panel">
 						<a href="#">
-							<img src="img/dewalt.png" alt="Производитель DeWALT">x
+							<img src="img/dewalt.png" alt="Производитель DeWALT">
 						</a>
 					</li>
 					<li class="brands-item panel">
