5 часть заданий готова

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 					<li class="services-item">
 						<button type="button" class="button-service service-current">Доставка</button>
 						<h3 class="service-title">Доставка</h3>
-						<p class="service-desc">Мы с удовольствием доставим ваш товар прямо<br>
+						<p class="service-desc text">Мы с удовольствием доставим ваш товар прямо<br>
 						к вашему подъезду совершенно бесплатно!<br>
 						Ведь мы неплохо заработаем,<br>
 						поднимая его на ваш этаж!</p>
@@ -215,7 +215,7 @@
 					<li class="services-item">
 						<button type="button" class="button-service">Гарантия</button>
 						<h3 class="visually-hidden service-title">Гарантия</h3>
-						<p class="visually-hidden service-desc">Если купленный у нас товар поломается или заискрит,<br>
+						<p class="visually-hidden service-desc text">Если купленный у нас товар поломается или заискрит,<br>
 						а также в случае пожара, спровоцированного его возгоранием,<br>
 						вы всегда можете быть уверенны в нашей гарантии. Мы обменяем<br>
 						сгоревший товар на новый.<br>
@@ -224,7 +224,7 @@
 					<li class="services-item">
 						<button type="button" class="button-service">Кредит</button>
 						<h3 class="visually-hidden service-title">Кредит</h3>
-						<p class="visually-hidden service-desc">
+						<p class="visually-hidden service-desc text">
 							Залезать в долговую яму стало проще!<br>
 							Кредитные консультанты придут вам на помощь.
 							<a href="#">Отправить заявку</a>
@@ -239,9 +239,9 @@
 					<p class="text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
 					<p class="text">Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными компаниями: </p>
 					<ul class="info-list">
-						<li class="info-item">Деловые лини</li>
+						<li class="info-item">Деловые линии</li>
 						<li class="info-item">Автотрейдинг</li>
-						<li class="info-item">ЖелДорЭкспедция</li>
+						<li class="info-item">ЖелДорЭкспедиця</li>
 					</ul>
 					<a href="about.html" class="btn button" >Подробнее о компании</a>
 				</div>
